--- a/Game_of_Life/Game_of_Life/MainWindow.xaml
+++ b/Game_of_Life/Game_of_Life/MainWindow.xaml
@@ -6,35 +6,6 @@
         xmlns:local="clr-namespace:Game_of_Life"
         mc:Ignorable="d"
         Title="MainWindow" Height="1000" Width="1000">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition>
-            </ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <!-- Kleiner Test -->
-        <Ellipse Grid.Column="0" Grid.Row="0" Fill="Black" Width="80" Height="80"></Ellipse>
-    </Grid>
+
+    <Grid Name="gameboard"></Grid>
 </Window>
