--- a/Game_of_Life/Game_of_Life/MainWindow.xaml
+++ b/Game_of_Life/Game_of_Life/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="1000" Width="1000">
 
-    <Grid Name="test">
+    <Grid Name="grid">
     </Grid>
 </Window>
