--- a/Game_of_Life/Game_of_Life/MainWindow.xaml
+++ b/Game_of_Life/Game_of_Life/MainWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game_of_Life"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1000">
-
-    <Grid Name="grid">
-    </Grid>
+        Title="MainWindow" Height="1000" Width="1200">
+    <DockPanel>
+        
+        <Grid Name="grid" DockPanel.Dock="Right" Width="1000"/>
+        <DockPanel DockPanel.Dock="Left" LastChildFill="False">
+            <Button Height="50" DockPanel.Dock="Top">Timer</Button>
+            <Button Height="50" DockPanel.Dock="Top">Start / Stop</Button>
+        </DockPanel>
+    </DockPanel>
+    
 </Window>
