--- a/Game_of_Life/Game_of_Life/MainWindow.xaml
+++ b/Game_of_Life/Game_of_Life/MainWindow.xaml
@@ -8,10 +8,10 @@
         Title="MainWindow" Height="1000" Width="1200">
     <DockPanel>
         
-        <Grid Name="grid" DockPanel.Dock="Right" Width="1000"/>
+        <Grid Name="grid" DockPanel.Dock="Right" Width="1000" Background="White"/>
         <DockPanel DockPanel.Dock="Left" LastChildFill="False">
-            <Button Height="50" DockPanel.Dock="Top">Timer</Button>
-            <Button Height="50" DockPanel.Dock="Top">Start / Stop</Button>
+            <Button Height="50" DockPanel.Dock="Top" Name="timer_button">Timer</Button>
+            <Button Height="50" DockPanel.Dock="Top" Name="start_button">Start / Stop</Button>
         </DockPanel>
     </DockPanel>
     
